[package]
name = "persistent_list"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["persistent", "list"]
description = "persistent list"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-persistent_list.git"
homepage = "https://github.com/nathanfaucett/rs-persistent_list"

[dependencies]
collection_traits = {git = "https://github.com/nathanfaucett/rs-collection_traits", features=["no_std"]}

[dev-dependencies]
linked_list = {git = "https://github.com/nathanfaucett/rs-linked_list"}
